Closed Bug 1755416 Opened 3 years ago Closed 3 years ago

chat.google.com will not finish loading.

Categories

(Core :: DOM: Service Workers, defect, P1)

Firefox 99
Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox97 --- unaffected
firefox98 --- unaffected
firefox99 blocking fixed

People

(Reporter: alice0775, Assigned: edenchuang)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

Initially reported in http://forums.mozillazine.org/viewtopic.php?p=14917549#p14917549 .
And I can reproduce the issue.

Steps to reproduce:

  1. Login to google
  2. Open https://chat.google.com
    (it will be redirected to https://mail.google.com/chat/u/0/)
  3. Wait for loading.
    --- page shows progress bar. but the bar gets stuck.

Actual results:
chat.google.com will not finish loading.

Actual results:
Chat page will display.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b0faf7d5135084d8082f3f11033e89f5bbf58f1c&tochange=33e221758c254d57858a4024501105a6c866fac0

Indeed, setting dom.serviceWorkers.navigationPreload.enabled to false and restart browser will fix the issue.

Has Regression Range: --- → yes
Assignee: nobody → echuang
Severity: -- → S2
Priority: -- → P1

Could we get the fix landed for this and follow up with the test?
It's an impactful bug to have in 99 nightly

Flags: needinfo?(echuang)
Pushed by echuang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f90e54675131 Using ChannelURI to create principal for NavigationPreload channel. r=dom-worker-reviewers,smaug,asuth
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/32986 for changes under testing/web-platform/tests
Flags: needinfo?(echuang)
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: