Bug 1755416 - Using ChannelURI to create principal for NavigationPreload channel. r=dom-worker-reviewers,smaug,asuth

Differential Revision: https://phabricator.services.mozilla.com/D138783